...
    func proceedToNextQuestionOrResults() {
        if isLastQuestion() {
            
            let message = makeResultsMessage()
           
            let viewModel = QuizResultsViewModel(
                title: "Этот раунд окончен!",
                text: message,
                buttonText: "сыграть еще раз")
            
                viewController?.viewBlackFrame()
                viewController?.show(quizresult: viewModel)
            ButtonIsEnable()
...
